# lstm-hyperparameter-tuning

./: README.md  Untitled-1.ipynb  pyproject.toml
data/processed/: processed_data.npz  scaler.save
data/raw/: input_data.csv
logs/: kerasbo_base_lstm_2025-04-23.csv  kerasbo_base_lstm_2025-04-23_summary.csv  kerasbo_base_lstm_2025-05-14.csv  kerasbo_base_lstm_2025-05-14_summary.csv  kerasbo_base_lstm_hpo_2025-05-14_17-21-00.csv  kerasbo_base_lstm_model_runs_2025-05-14_17-21-00_summary.csv  kerasbo_base_lstm_model_runs_2025-05-17_06-09-07.csv  kerasbo_base_lstm_model_runs_2025-05-17_06-09-07_summary.csv  trial_1747478546.csv
outputs/keras_tuner/: trial_1747260983.csv
outputs/keras_tuner/lstm_tuning/: oracle.json
outputs/keras_tuner/lstm_tuning/trial_00/: checkpoint.weights.h5  trial.json
outputs/keras_tuner/lstm_tuning/trial_0000/: checkpoint.weights.h5  trial.json
outputs/keras_tuner/lstm_tuning/trial_0001/: checkpoint.weights.h5  trial.json
outputs/keras_tuner/lstm_tuning/trial_0002/: checkpoint.weights.h5  trial.json
outputs/keras_tuner/lstm_tuning/trial_0003/: checkpoint.weights.h5  trial.json
outputs/keras_tuner/lstm_tuning/trial_0004/: checkpoint.weights.h5  trial.json
src/data/: load_data.py  preprocessing.py
src/models/: base_lstm.py  evaluate_hparams.py  train_test_run.py
src/tuning/: hyperopt_runner.py  keras_tuner_runner.py  old_keras_tuner.py  smac_runner.py
src/utils/: common.py  compute_metrics.py  hps_logger.py  logging.py  metrics.py  model_runs_logger.py  summary_logger.py
tests/: test_tf.py
(+145 files in other folders)
