[tool.poetry]
name = "lstm-hyperparameter-tuning"
version = "0.1.0"
description = "LSTM model with multiple hyperparameter tuning strategies"
authors = ["David Jean <davidejeaniii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tensorflow = "^2.19.0"
ipykernel = "^6.29.5"
numpy = "<2.2.0"
mlflow = "^2.21.3"
plotly = "^6.0.1"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
scipy = "^1.15.2"
optuna = "^4.3.0"
hyperopt = "^0.2.7"
ipywidgets = "^8.1.6"
pywavelets = "^1.8.0"
keras-tuner = "^1.4.7"
smac = { git = "https://github.com/automl/SMAC3.git", rev = "main" }
configspace = "^0.6.0"

[[tool.poetry.source]]
name = "nvidia"
url = "https://pypi.ngc.nvidia.com"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

